# PP-Lab1

./: CMakeLists.txt  README.md  experiments.h  generator.cpp  main.cpp  num_threads.cpp
